@@ -24,7 +24,10 @@ from numpy cimport PyArray_DATA
 cdef N_Vector N_VNewEmpty_Euclidean(long int n) noexcept:
     IF SUNDIALS_VERSION >= (6,0,0):
         cdef SUNDIALS.SUNContext ctx = NULL
-        cdef void * comm = NULL
+        IF SUNDIALS_VERSION >= (7,0,0):
+            cdef SUNDIALS.SUNComm comm = 0
+        ELSE:
+            cdef void* comm = NULL
         SUNDIALS.SUNContext_Create(comm, &ctx)
         cdef N_Vector v = N_VNew_Serial(n, ctx)
     ELSE:
@@ -39,7 +42,10 @@ cdef inline N_Vector arr2nv(x) noexcept:
     cdef void* data_ptr=PyArray_DATA(ndx)
     IF SUNDIALS_VERSION >= (6,0,0):
         cdef SUNDIALS.SUNContext ctx = NULL
-        cdef void * comm = NULL
+        IF SUNDIALS_VERSION >= (7,0,0):
+            cdef SUNDIALS.SUNComm comm = 0
+        ELSE:
+            cdef void* comm = NULL
         SUNDIALS.SUNContext_Create(comm, &ctx)
         cdef N_Vector v = N_VNew_Serial(n, ctx)
     ELSE:
@@ -63,7 +69,7 @@ cdef inline void arr2nv_inplace(x, N_Vector out) noexcept:
     cdef void* data_ptr=PyArray_DATA(ndx)
     memcpy((<N_VectorContent_Serial>out.content).data, data_ptr, n*sizeof(realtype))
     
-cdef inline np.ndarray nv2arr(N_Vector v) noexcept:
+cdef inline np.ndarray nv2arr(N_Vector v):
     cdef long int n = (<N_VectorContent_Serial>v.content).length
     cdef realtype* v_data = (<N_VectorContent_Serial>v.content).data
     cdef np.ndarray[realtype, ndim=1, mode='c'] x=np.empty(n)
@@ -82,7 +88,7 @@ cdef inline void nv2mat_inplace(int Ns, N_Vector *v, np.ndarray o) noexcept:
         for j in range(Nf):
             o[j,i] = (<N_VectorContent_Serial>v[i].content).data[j]
 
-cdef inline realtype2arr(realtype *data, int n) noexcept:
+cdef inline realtype2arr(realtype *data, int n):
     """Create new numpy array from realtype*"""
     cdef np.ndarray[realtype, ndim=1, mode='c'] x=np.empty(n)
     memcpy(PyArray_DATA(x), data, n*sizeof(realtype))
