@@ -15,7 +15,6 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-import nose
 from assimulo import testattr
 from assimulo.solvers.odassl import ODASSL
 from assimulo.problem import Implicit_Problem
