@@ -1,5 +1,8 @@
 --- CHANGELOG ---
 
+--- Assimulo-3.5.1 ---
+    * Fixed build with sundials 7.x
+
 --- Assimulo-3.5.0 ---
     * Changed "numpy.float" to equivalent "numpy.float64" due to DeprecationWarnings in numpy >= 1.20.
     * Improved examples with sparse jacobians by omitting the zeros in the jacobians.
